# irods-uu-microservices

./: .clang-format  .gitignore  CHANGELOG.txt  CMakeLists.txt  DONDERS_LICENSE  LICENSE  README.md
.github/workflows/: linter-irods-clang-format.yml
CMakeModules/: DetectOS.cmake  Finduuid.cmake
doc/: api.md  credentialsstore.md
package/: description.txt
src/: Archive.hh  CredentialsStore.hh  irods_includes.hh  msiArchiveCreate.cc  msiArchiveExtract.cc  msiArchiveIndex.cc  msiArchiveList.cc  msiCreateEpicPID.cc  msiCurlMail.cc  msiDeleteEpicPID.cc  msiEnrollExternalUser.cc  msiGenerateEpicPID.cc  msiGenerateRandomID.cc  msiGenerateUUID.cc  msiGenerateYodaDOI.cc  msiGetDataCiteDOI.cc  msiGetEpicPID.cc  msiGetEpicPIDMetadata.cc  msiHelloMyWorld.cc  msiLoadMetadataFromXml.cc  msiMakeUpperGenQuery.cc  msiPutEpicPID.cc  msiRegisterDataCiteDOI.cc  msiRegisterEpicPID.cc  msiRemoveDataCiteMetadata.cc  msiSecureExecCmd.cc  msiSendMail.cc  msiSetUpperCaseWhereQuery.cc  msiStrToUpper.cc  msiUpdateEpicPID.cc  msiXmlDocSchemaValidate.cc  msiXsltApply.cc  msi_add_avu.cpp  msi_dataObj_checksum.cpp  msi_dir_list.cpp  msi_file_checksum.cpp  msi_json_arrayops.cc  msi_json_objops.cc  msi_rmw_avu.cpp  msi_stat_vault.cpp
tests/: avu.xml  msi_add_avu_test.r  msi_archive_create.r  msi_archive_create_test.r  msi_archive_extract_test.r  msi_json_arrayops_test.r  msi_json_objops_test.r  msi_rmw_avu_test.r  test_msiGenerateRandomID.r  test_msiGenerateYodaDOI.r  test_msiGetDataCiteDOI.r  test_msiLoadMetadataFromXml_Buf.r  test_msiLoadMetadataFromXml_File.r  test_msiRegisterDataCiteDOI.r  test_msiXsltApply.r
